--- a/food.html
+++ b/food.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodesthetic</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Monsieur+La+Doulaise&family=Reenie+Beanie&family=Rouge+Script&display=swap" rel="stylesheet">
     <style>
         body{
             background-color: lightblue;
@@ -12,8 +14,8 @@
         h1{
             text-align: center;
             color: rgb(189, 117, 150);
-            font-family: fantasy;
-            font-size: 50px;
+            font-family: 'Rouge Script', cursive;
+            font-size: 100px;
         }
         p{
             font-family: 'Courier New', Courier, monospace;
